Prepare to add widget to home page and fix kss resources on mobile + map tweaks

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -180,9 +180,82 @@ body, html, #__next {
   }
 
 
+.scrollWrapper{
+  display: flex;
+  justify-content: space-between;
+}
 
+/* Empty as it stands, but could be filled conditionally later */
+.leftInfoContainer{
+  flex-grow: 1;
+}
+
+.rightInfoContainer{
+  flex-grow: 1;
+  padding-top: 82px;
+}
+
+/* Switch to two column layout (all extra info moved to right)*/
+@media (max-width:1400px) {
+  .leftInfoContainer {
+    flex-grow: 0;
+  }
+}
+
+/* Switch to one column layout (extra info moved above announcements)*/
+@media (max-width:1000px){
+  .scrollWrapper{
+    flex-direction: column;
+  }
+  
+  .rightInfoContainer{
+    order: -1;
+    padding-left:0px;
+    padding-top:0px;
+  }
+}
+
+.discordPromptBox {
+  margin-left:32px;
+  border: 1px solid var(--dark-gray);
+  border-radius: 16px;
+}
+
+.discordPromptContainer{
+  padding-top:36px;
+  padding-bottom:36px;
+  justify-content: space-between;
+  display: flex;
+}
+
+.infoHeaderText {
+  color:var(--dark-gray);
+  padding-right: 0px;
+}
+
+.discordButton{
+  flex-shrink: 0;
+  display: block;
+  border: 1px solid #A1A1A1;
+  height: 44px;
+  width: 44px;
+  border-radius: 16px;
+  display: flex;
+  justify-content: center;
+  margin: 0px;
+  margin-right: 36px;
+}
+
+.discordIcon{
+  width: 24px;
+  color:black;
+}
 
 /* Stuff for the announcemnt cards */
+
+  .annnouncementContainer{
+    padding-top:50px;
+  }
 
   .anceCards {
     /* The class for each full announcement card */
@@ -618,8 +691,8 @@ body, html, #__next {
 @media screen and (min-width: 1080px) {
   .anceCards {
     width: 720px;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     padding:64px;
     border-radius: 30px;
   }
@@ -1191,6 +1264,7 @@ html{scroll-behavior:smooth}
   flex: 1.8;
   border-radius: 25px;
   margin: 0px;
+
 }
 
 .button3 h4, .b3Links {
@@ -1259,7 +1333,32 @@ html{scroll-behavior:smooth}
   opacity: 100%;
 }
 
+.b3LinkContainer{
+  display: flex;
+  flex-flow:column wrap;
+  width: 100%;
+  height: 80%;
+  justify-content: center;
+  padding-top: 8%; 
+}
 
+.button3MobileLink{
+  position:absolute;
+  top:0;
+  left:0;
+  width:0%;
+  height:0%;
+}
+
+@media all and (max-width: 1000px) {
+  .button3MobileLink{
+    right:0;
+    bottom:0;
+    margin:0;
+    width:auto;
+    height:auto;
+  }
+}
 
 
 
@@ -1640,11 +1739,6 @@ html{scroll-behavior:smooth}
     flex: 1 0px;
   }
 
-  .b3Links {
-    height: 0%;
-    width: 0%;
-  }
-
   .button3 h3 {
     position: absolute;
     bottom: 23px;
@@ -1714,7 +1808,10 @@ html{scroll-behavior:smooth}
     gap: 5px;
   }
 
-
+  .b3Links {
+    height: 0%;
+    width: 0%;
+  }
 
 
   .dateIdentifier-day {
